@@ -1,3 +1,7 @@
+2009-07-14  Glenn Morris  <rgm@gnu.org>
+
+	* subr.el (def-edebug-spec): Doc fix.
+
 2009-07-14  Kenichi Handa  <handa@m17n.org>
 
 	* international/characters.el: Fix setting of category ?C.
